this is 10% formatting, 20% method names, 50% code and 100% concentrated power of will

--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 {
     "logFile":"./log",
     "isProduction":"No",
-    "apiKey": "{{Insert OpenDota Key Here"
+    "apiKey": "{{Insert OpenDota Key Here}}",
+    "graphAPIPort":5000,
+    "restAPIPort":5001
 }
