updated main function & graphapi server stuff

--- a/config.json
+++ b/config.json
@@ -4,5 +4,5 @@
     "apiKey": "{{Insert OpenDota Key Here}}",
     "graphAPIPort":5000,
     "restAPIPort":5001,
-    "connectionString":"user:password@tcp(127.0.0.1:3306)/DotaDatabase"
+    "databaseName":"DotaDatabase"
 }
