graphql is now running

--- a/config.json
+++ b/config.json
@@ -1,9 +1,8 @@
 {
     "logFile":"./log",
-    "isProduction":"No",
+    "isProduction":"False",
     "apiKey": "{{Insert OpenDota Key Here}}",
-    "graphAPIPort":5000,
-    "restAPIPort":5001,
-    "connectionString":"user:password@tcp(127.0.0.1:3306)/DotaDatabase",
+    "graphAPIPort":"8080",
+    "gRPCAPIPort":"5001",
     "databaseName":"DotaDatabase"
 }
