--- a/config.json
+++ b/config.json
@@ -5,5 +5,5 @@
     "graphAPIPort":"8080",
     "gRPCAPIPort":"5001",
     "databaseName":"DotaDatabase",
-    "secureModeGRPC": "true"
+    "secureModeGRPC": "false"
 }
